# cnn-elpv-dataset

./: .gitignore  .gitmodules  Pipfile  README.md  cnn-elpv-dataset.py  setup.cfg
