[metadata]
name = cnn-elpv-dataset
version = attr: cnnelpv.__version__
description = CNN-based identification of defective solar cells in electroluminescence imagery.
long_description = file: README.md, LICENSE.md
# keywords = one, two
license =   CC-BY-NC-4.0
classifiers =
    Programming Language :: Python :: 3

# [options]
# zip_safe = False
# include_package_data = True
# packages = find:
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.8"

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

[flake8]
ignore = W503
per-file-ignores =
    # F401 imported but unused (imports are just forwarded)
    # F403 unable to detect undefined names (init files should not require this check)
    __init__.py: F401,F403
max-line-length = 88
max-complexity = 18
select = B,C,E,F,W,T4

[tool:pytest]
testpaths=tests
python_files = test_*.py
